Layout für schmalere Displays angepasst

--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
 			color: #fff;
 			text-decoration: none;
         }
+		@media screen and (max-width: 750px) {
+            .the-title {
+                font-size: 1.5em;
+            }
+            .sub-title {
+                font-size: 0.5em;
+            }
+		}
+		@media screen and (max-width: 500px) {
+            .the-title {
+                font-size: 1em;
+            }
+            .sub-title {
+                font-size: 0.25em;
+            }
+		}
     </style>
 </head>
 <body>
