--- a/index.html
+++ b/index.html
@@ -1,64 +1,21 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hier entsteht eine neue Webseite.</title>
-    <style>
-        html {
-            width: 100%;
-            height: 100%;
-            background-image: linear-gradient(to bottom right, #013c4a 0, #193e4c 44%, #004b5b 100%);
-            color: #fff;
-            font-family: GeoSlb712MdBT, Georgia, serif;
-            font-style: normal;
-        }
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        .the-box {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            -webkit-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-        }
+        <title>Bibelverse</title>
 
-        .the-title {
-            padding: 5px;
-            font-size: 3em;
-            text-align: center;
-        }
-        .sub-title {
-            padding: 5px;
-            font-size: 1em;
-            text-align: right;
-        }
-        .sub-title > a {
-			color: #fff;
-			text-decoration: none;
-        }
-		@media screen and (max-width: 750px) {
-            .the-title {
-                font-size: 1.5em;
-            }
-            .sub-title {
-                font-size: 0.5em;
-            }
-		}
-		@media screen and (max-width: 500px) {
-            .the-title {
-                font-size: 1em;
-            }
-            .sub-title {
-                font-size: 0.25em;
-            }
-		}
-    </style>
-</head>
-<body>
-<div class="the-box">
-    <div class="the-title">Seht hin, ich mache etwas Neues</div>
-	<div class="sub-title"><a href="https://www.bibleserver.com/NLB/Jesaja43%2C19" target="_blank">Jesaja 43,19</a></div>
-</div>
-</body>
+        <script type="text/javascript" src="versliste.js"></script>
+        <script type="text/javascript" src="scripts.js"></script>
+
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+
+    </head>
+    <body onload="getVerseToday(versliste)">
+        <!--<div class="the-box">
+            <div class="the-title">Seht hin, ich mache etwas Neues</div>
+            <div class="sub-title"><a href="https://www.bibleserver.com/NLB/Jesaja43%2C19" target="_blank">Jesaja 43,19</a></div>
+        </div>-->
+    </body>
 </html>
