Jetzt wird der Index Tagesabhängig berechnet, d.h. innerhalb eines Tages bleibt der Index - und damit die Bibelstelle - gleich. Auch wenn die Seite neu geladen wird

--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
         <title>Bibelverse</title>
 
         <script type="text/javascript" src="versliste.js"></script>
+        <script type="text/javascript" src="randomMapping.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
 
         <link rel="stylesheet" type="text/css" href="styles.css" />
 
     </head>
-    <body onload="getVerseToday(versliste)">
-        <!--<div class="the-box">
-            <div class="the-title">Seht hin, ich mache etwas Neues</div>
-            <div class="sub-title"><a href="https://www.bibleserver.com/NLB/Jesaja43%2C19" target="_blank">Jesaja 43,19</a></div>
-        </div>-->
+    <body onload="getVerseToday(versliste, randomMapping)">
     </body>
 </html>
