--- a/web/gunther/index.html
+++ b/web/gunther/index.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="randomMapping.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="../styles.css" />
 
     </head>
     <body onload="getVerseToday(versliste, randomMapping)">
