--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -128,6 +128,29 @@
 		</div>
 		<div class="thema">
 			<div class="head">
+				<h3>Selbstbeherrschung</h3>
+			</div>
+			<div class="locations">
+				<div class="location">
+					<div class="text">Ein Narr ist jähzornig, der Kluge aber bleibt ruhig, wenn er beschimpft wird.</div>
+					<a class="point" href="https://www.bibleserver.com/NLB/Spr%C3%BCche12%2C16">Sprüche 12,16 (NLB)</div>
+				</div>
+				<div class="location">
+					<div class="text">Geduld bringt weiter als Heldentum; / einer, der sich selbst beherrscht, ist besser als einer, der Städte einnimmt.</div>
+					<a class="point" href="https://www.bibleserver.com/Ne%C3%9C/Spr%C3%BCche16%2C32">Sprüche 16,32 (NeÜ)</div>
+				</div>
+				<div class="location">
+					<div class="text">Wer sich nicht beherrschen kann, ist so schutzlos wie eine Stadt ohne Mauer.</div>
+					<a class="point" href="https://www.bibleserver.com/HFA/Spr%C3%BCche25%2C28">Sprüche 25,28 (HFA)</div>
+				</div>
+				<div class="location">
+					<div class="text">Der Dummkopf gibt jedem Ärger freien Lauf; der Weise kann sich beherrschen.</div>
+					<a class="point" href="https://www.bibleserver.com/GNB/Spr%C3%BCche29%2C11">Sprüche 29,11 (GNB)</div>
+				</div>
+			</div>
+		</div>
+		<div class="thema">
+			<div class="head">
 				<h3>Fasten</h3>
 			</div>
 			<div class="locationms">
