--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -172,5 +172,28 @@
 			</div>
 		</div>
 		-->
+		
+<!--
+Glaube:
+Hebräer 11,1
+Epheser 4,13
+
+Taten:
+Epheser 2,10
+1.Korinther 12,18
+
+Gebet:
+Markus 1:35
+Lukas 3:21
+Lukas 5:16
+Lukas 6:12
+Lukas 9:18
+Lukas 9:28-29
+Lukas 22:32
+Lukas 22:40...
+Lukas 23:34
+
+-->
+
     </body>
 </html>
