erste Bibelstelle in zwei aufgespalten

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -52,7 +52,11 @@
 			<div class="locations">
 				<div class="location">
 					<div class="text">...Und seid dankbar!</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Kolosser3%2C15-17">Kolosser 3,15-17</a>
+					<a class="point" href="https://www.bibleserver.com/Ne%C3%9C/Kolosser3%2C15">Kolosser 3,15 (NeÜ)</a>
+				</div>
+				<div class="location">
+					<div class="text">Überhaupt alles, was ihr tut und sagt, sollt ihr im Namen des Herrn Jesus tun und durch ihn Gott, dem Vater, danken!</div>
+					<a class="point" href="https://www.bibleserver.com/Ne%C3%9C/Kolosser3%2C17">Kolosser 3,17 (NeÜ)</a>
 				</div>
 				<div class="location">
 					<div class="text">Hört nicht auf zu beten und Gott zu danken.</div>
