--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1,203 +1,230 @@
-<!DOCTYPE HTML>
 <html>
-    <head>
-        <meta charset="utf-8" />
-		<!--
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-		-->
-		<title>Dankbarkeit</title>
+	<head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Bibelstellen, thematisch</title>
         <style>
 			html {
-				width: 100%;
-				height: 100%;
 				background-image: linear-gradient(to bottom right, #013c4a 0, #193e4c 44%, #004b5b 100%);
-				color: #fff;
-				font-family: GeoSlb712MdBT, Georgia, serif;
-				font-style: normal;
-				font-size: 100%;
-				margin: 0px;
-				padding: 0px;
 			}
-            body {
-                margin: 6rem 10rem;
-            }
-            .thema {
-				margin: 1rem;
-            }
-            .head {
-				margin-top: 3rem;
-				font-size: 1.5rem;
-            }
-			.head > h3 {
-				text-decoration: underline;
+			.pagecontent {
+				width: 60%;
+				margin: auto;
+				margin-top: 3.125rem; /*50px;*/
+				padding: 0.625rem; /*10px;*/
 			}
-			.locations {
+			.btnframe {
+				width: calc(100% - 1.25rem); /*20px);*/
+				margin: 0.625rem 0.625rem 0px 0.625rem;
+				border: 1px solid #F0F0F0;
 			}
-			.location {
-				margin-bottom: 1rem;
+			.btnframe:last-child {
+				margin-bottom: 0.625rem;
 			}
-			.text {
+			.btn {
+				position: relative;
+				width: 100%;
+				height: 2.8125rem; /*45px;*/
+				text-align: left;
+				color: #F0F0F0;
+				border: 1px #F0F0F0 solid;
+				padding-top: 5px;
+				vertical-align: top;
+				margin: -1px;
 			}
-			.point {
-				color: #fff;
-				font-size: 70%;
+			.btn:after {
+				position: absolute;
+				top: 1rem; /*15px;*/
+				right: 2rem; /*30px;*/
+				content: "";
+				width: 1rem; /*15px;*/
+				height: 1rem; /*15px;*/
+				border: 1px solid #F0F0F0;
+				border-left: none;
+				border-bottom: none;
+				background-color: transparent;
+				transform: rotate(45deg);
+				transition: transform 1s;
 			}
-        </style>
-    </head>
-    <body>
-		<div class="thema">
-			<div class="head">
-				<h3>Dankbarkeit</h3>
+			.btnframe.selected > .btn {
+			}
+			.btnframe.selected > .btn:after {
+				transform: rotate(135deg);
+			}
+			.label {
+				margin-top: 0.75rem; /*12px;*/
+				margin-left: 1.25rem; /*20px;*/
+				font-size: 1em;
+				font-weight: bold;
+				font-family: Arial, Helvetica;
+				color: #F0F0F0;
+			}
+			.moreinfos {
+				max-height: 0px;
+				margin: 0px 0.625rem; /*10px;*/
+				transition: max-height 1s ease-in-out;
+				overflow: hidden;
+			}
+			.btnframe.selected > .moreinfos {
+				max-height: 1000px;
+			}
+			.moreinfo {
+				margin-top: 0.75rem; /*12px;*/
+				margin-left: 1.25rem; /*20px;*/
+				font-family: Arial, Helvetica;
+				color: #F0F0F0;
+			}
+			.moreinfo:last-child {
+				margin-bottom: 0.75rem; /*12px;*/
+			}
+			.moreinfo > .text {
+				font-size: 0.8em;
+			}
+ 			.moreinfo > .footer {
+				font-size: 0.7em;
+				color: #D0D0D0;
+			}
+			.footer > a {
+				color: #F0F0F0;
+				text-decoration: none;
+			}
+			
+			@media screen and (max-width: 1000px) {
+				.pagecontent {
+					width: 70%;
+				}
+			}
+			
+			@media screen and (max-width: 750px) {
+				.pagecontent {
+					width: 80%;
+				}
+			}
+			
+			@media screen and (max-width: 500px) {
+				.pagecontent {
+					width: 100%;
+					padding: 0px;
+				}
+				.moreinfo {
+					margin-left: 0px;
+				}
+			}
+       </style>
+        <script type="text/javascript">
+			function toggleBtn(btn) {
+				if (btn.parentNode.className.indexOf("selected") == -1) {
+					btn.parentNode.className += " selected";
+				} else {
+					btn.parentNode.className = "btnframe";
+				}
+			}
+        </script>
+	</head>
+	<body>
+		<div class="pagecontent">
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Dankbarkeit</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Und der Friede, den Christus schenkt, soll euer ganzes Leben bestimmen. Gott hat euch dazu berufen, in Frieden miteinander zu leben; ihr gehört ja alle zu dem einen Leib von Christus. Dankt Gott dafür!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C15" target="_blank">Kolosser 3,15 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">All euer Tun – euer Reden wie euer Handeln – soll zeigen, dass Jesus euer Herr ist. Weil ihr mit ihm verbunden seid, könnt ihr Gott, dem Vater, für alles danken.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C17" target="_blank">Kolosser 3,17 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Lasst euch durch nichts vom Gebet abbringen und vergesst dabei nicht, Gott zu danken.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser4%2C2" target="_blank">Kolosser 4,2 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Was immer auch geschieht, seid dankbar, denn das ist Gottes Wille für euch, die ihr Christus Jesus gehört.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/1.Thessalonicher5%2C18" target="_blank">1.Thessalonicher 5,18 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Macht euch keine Sorgen, sondern wendet euch in jeder Lage an Gott und bringt eure Bitten vor ihn. Tut es mit Dank für das, was er euch geschenkt hat.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Philipper4%2C6-7" target="_blank">Philipper 4,6 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Dankt dem HERRN, denn er ist gut zu uns, seine Liebe hört niemals auf!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Chronik16%2C34" target="_blank">1.Chronik 16,34 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Da wir also ein Reich empfangen, das nicht zerstört werden kann, wollen wir dankbar sein und Gott Freude machen, indem wir ihn in Ehrfurcht vor seiner Heiligkeit anbeten!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Hebr%C3%A4er12%2C28" target="_blank">Hebräer 12,28 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Dankt Gott, dem Vater, zu jeder Zeit für alles im Namen unseres Herrn Jesus Christus.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Epheser5%2C20" target="_blank">Epheser 5,20 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Ich will aber, dass ihr Gott dankt und die Versprechen, die ihr vor dem Höchsten abgelegt habt, erfüllt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm50%2C14" target="_blank">Psalm 50,14 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Gott, die Völker sollen dir danken, alle Völker sollen dich loben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm67%2C4" target="_blank">Psalm 67,4 (NLB)</a></div>
+					</div>
+				</div>
 			</div>
-			<div class="locations">
-				<div class="location">
-					<div class="text">...Und seid dankbar!</div>
-					<a class="point" href="https://www.bibleserver.com/Ne%C3%9C/Kolosser3%2C15">Kolosser 3,15 (NeÜ)</a>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Freude</div>
 				</div>
-				<div class="location">
-					<div class="text">Überhaupt alles, was ihr tut und sagt, sollt ihr im Namen des Herrn Jesus tun und durch ihn Gott, dem Vater, danken!</div>
-					<a class="point" href="https://www.bibleserver.com/Ne%C3%9C/Kolosser3%2C17">Kolosser 3,17 (NeÜ)</a>
-				</div>
-				<div class="location">
-					<div class="text">Hört nicht auf zu beten und Gott zu danken.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Kolosser4%2C2">Kolosser 4,2</a>
-				</div>
-				<div class="location">
-					<div class="text">Was immer auch geschieht, seid dankbar, denn das ist Gottes Wille für euch, die ihr Christus Jesus gehört.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/1.Thessalonicher5%2C18">1.Thessalonicher 5,18</a>
-				</div>
-				<div class="location">
-					<div class="text">...Sagt Gott, was ihr braucht, und dankt ihm.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Philipper4%2C6">Philipper 4,6</a>
-				</div>
-				<div class="location">
-					<div class="text">Dankt dem HERRN, denn er ist gut und seine Gnade bleibt ewig bestehen.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/1.Chronik16%2C34">1.Chronik 16,34</a>
-				</div>
-				<div class="location">
-					<div class="text">...Deshalb wollen wir dankbar sein, denn dadurch dienen wir Gott, wie es ihm gefällt: in Ehrfurcht und heiliger Scheu.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Hebr%C3%A4er12%2C28">Hebräer 12,28</a>
-				</div>
-				<div class="location">
-					<div class="text">Dankt Gott, dem Vater, zu jeder Zeit für alles im Namen unseres Herrn Jesus Christus.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Epheser5%2C20">Epheser 5,20</a>
-				</div>
-				<div class="location">
-					<div class="text">Ich will aber, dass ihr Gott dankt und die Versprechen, die ihr vor dem Höchsten abgelegt habt, erfüllt.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Psalm50%2C14">Psalm 50,14</a>
-				</div>
-				<div class="location">
-					<div class="text">Gott, die Völker sollen dir danken, alle Völker sollen dich loben.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Psalm67%2C4">Psalm 67,4</a>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Dadurch wurde mir klar, dass es das Beste für den Menschen ist, sich zu freuen und das zu genießen, was er hat. Denn es ist ein Geschenk Gottes, wenn jemand isst und trinkt und sich über die Früchte seiner Arbeit freuen kann.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Prediger3%2C12-13" target="_blank">Prediger 3,12-13 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Geht jetzt zu eurem Festmahl, esst und trinkt und gebt auch denen etwas ab, für die nichts vorbereitet ist! Heute ist ein Festtag für Jahwe. Seid nicht traurig, denn die Freude an Jahwe ist euer Schutz!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Nehemia8%2C10" target="_blank">Nehemia 8,10 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Was auch immer geschehen mag, meine lieben Brüder und Schwestern: Freut euch, weil ihr zum Herrn gehört! Ich werde nicht müde, euch immer wieder dasselbe zu sagen; weiß ich doch, dass es euch Gewissheit gibt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Philipper3%2C1" target="_blank">Philipper 3,1 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Freut euch jeden Tag, dass ihr mit dem Herrn verbunden seid! Ich sage es noch einmal: Freut euch!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Philipper4%2C4" target="_blank">Philipper 4,4 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Freut euch zu jeder Zeit!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Thessalonicher5%2C16" target="_blank">1.Thessalonicher 5,16 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Seid fröhlich in der Hoffnung darauf, dass Gott seine Zusagen erfüllt. Bleibt standhaft, wenn ihr verfolgt werdet. Und lasst euch durch nichts vom Gebet abbringen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer12%2C12" target="_blank">Römer 12,12 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Freut euch mit den Fröhlichen! Weint aber auch mit den Trauernden!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer12%2C15" target="_blank">Römer 12,15 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
 				</div>
 			</div>
+			<!--
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label"></div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+				</div>
+			</div>
+			-->
 		</div>
-		<!--
-		<div class="thema">
-			<div class="head">
-				<h3>Freude</h3>
-			</div>
-			<div class="locations">
-				<div class="location">
-					<div class="text">Was immer auch geschehen wird, liebe Freunde, freut euch im Herrn. Ich werde nicht müde, euch dies zu schreiben, denn es wird euch nur noch mehr stärken.</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Philipper3%2C1">Philipper 3,1</a>
-				</div>
-				<div class="location">
-					<div class="text">Freut euch jeden Tag, dass ihr mit dem Herrn verbunden seid! Ich sage es noch einmal: Freut euch!</div>
-					<a class="point" href="https://www.bibleserver.com/LUT.ELB.HFA.GNB.NLB.Ne%C3%9C/Philipper4%2C4">Philipper 4,4</a>
-				</div>
-			</div>
-		</div>
-		<div class="thema">
-			<div class="head">
-				<h3>Vertrauen</h3>
-			</div>
-			<div class="locations">
-				<div class="location">
-					<div class="text">...</div>
-					<a class="point" href="">...</div>
-				</div>
-			</div>
-		</div>
-		<div class="thema">
-			<div class="head">
-				<h3>Ehrfurcht</h3>
-			</div>
-			<div class="locations">
-				<div class="location">
-					<div class="text">...</div>
-					<a class="point" href="">...</div>
-				</div>
-			</div>
-		</div>
-		<div class="thema">
-			<div class="head">
-				<h3>Selbstbeherrschung</h3>
-			</div>
-			<div class="locations">
-				<div class="location">
-					<div class="text">Ein Narr ist jähzornig, der Kluge aber bleibt ruhig, wenn er beschimpft wird.</div>
-					<a class="point" href="https://www.bibleserver.com/NLB/Spr%C3%BCche12%2C16">Sprüche 12,16 (NLB)</div>
-				</div>
-				<div class="location">
-					<div class="text">Geduld bringt weiter als Heldentum; / einer, der sich selbst beherrscht, ist besser als einer, der Städte einnimmt.</div>
-					<a class="point" href="https://www.bibleserver.com/Ne%C3%9C/Spr%C3%BCche16%2C32">Sprüche 16,32 (NeÜ)</div>
-				</div>
-				<div class="location">
-					<div class="text">Wer sich nicht beherrschen kann, ist so schutzlos wie eine Stadt ohne Mauer.</div>
-					<a class="point" href="https://www.bibleserver.com/HFA/Spr%C3%BCche25%2C28">Sprüche 25,28 (HFA)</div>
-				</div>
-				<div class="location">
-					<div class="text">Der Dummkopf gibt jedem Ärger freien Lauf; der Weise kann sich beherrschen.</div>
-					<a class="point" href="https://www.bibleserver.com/GNB/Spr%C3%BCche29%2C11">Sprüche 29,11 (GNB)</div>
-				</div>
-			</div>
-		</div>
-		<div class="thema">
-			<div class="head">
-				<h3>Fasten</h3>
-			</div>
-			<div class="locationms">
-				<div class="location">
-					<div class="text">...</div>
-					<a class="point" href="">...</div>
-				</div>
-			</div>
-		</div>
-		<div class="thema">
-			<div class="head">
-				<h3>Taufe</h3>
-			</div>
-			<div class="locationms">
-				<div class="location">
-					<div class="text">...</div>
-					<a class="point" href="">...</div>
-				</div>
-			</div>
-		</div>
-		-->
-		
-<!--
-Glaube:
-Hebräer 11,1
-Epheser 4,13
-
-Taten:
-Epheser 2,10
-1.Korinther 12,18
-
-Gebet:
-Markus 1:35
-Lukas 3:21
-Lukas 5:16
-Lukas 6:12
-Lukas 9:18
-Lukas 9:28-29
-Lukas 22:32
-Lukas 22:40...
-Lukas 23:34
-
--->
-
-    </body>
+	</body>
 </html>
+
