--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -146,7 +146,7 @@
 					</div>
 					<div class="moreinfo">
 						<div class="text">Macht euch keine Sorgen, sondern wendet euch in jeder Lage an Gott und bringt eure Bitten vor ihn. Tut es mit Dank für das, was er euch geschenkt hat.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Philipper4%2C6-7" target="_blank">Philipper 4,6 (GNB)</a></div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Philipper4%2C6" target="_blank">Philipper 4,6 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Dankt dem HERRN, denn er ist gut zu uns, seine Liebe hört niemals auf!</div>
@@ -228,3 +228,67 @@
 	</body>
 </html>
 
+<!--
+Vertrauen
+-----------------
+
+Glaube/Vertrauen
+------------------------------
+Jakobus 2,19
+Matthäus 7,22
+Jesaja 29,13
+Matthäus 15,8
+Markus 7,6-8
+Psalm 33,4
+Hebräer 3,12-14
+Jesaje 55,8-11
+Hebräer 11,1
+Epheser 4,13
+
+Ehrfurcht/Demut
+----------------------------
+Epheser 4,2
+Römer 12,3
+Römer 12,16
+Epheser 5,21
+Kolosser 3,13
+1.Korinther 4,5
+1.Korinther 8,2-3
+
+
+Gottesdienst
+---------------------
+Jesaja 58,3-7
+Amos 5,21-24
+Hosea 6,6
+Micha 6,8
+Sacharja 7,9-10
+
+Regierung
+-----------------
+Römer 13,1-7
+Daniel 4,29
+Hiob 34,23-24
+Psalm 75,8
+Jesaja 40,23
+Lukas 1,52
+Apostelgeschichte 23,2-5 (2.Mose 22,27)
+
+Taten:
+-----------------
+Epheser 2,10
+1.Korinther 12,18
+
+Gebet:
+-----------------
+Markus 1:35
+Lukas 3:21
+Lukas 5:16
+Lukas 6:12
+Lukas 9:18
+Lukas 9:28-29
+Lukas 22:32
+Lukas 22:40...
+Lukas 23:34
+
+-->
