--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -211,6 +211,250 @@
 					-->
 				</div>
 			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Glaube/Vertrauen</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Du glaubst, dass es nur einen einzigen Gott gibt? Schön und gut. Aber das glauben sogar die Dämonen – und zittern vor Angst. Wann endlich wirst du törichter Mensch einsehen, dass der Glaube nichts wert ist, wenn wir nicht auch tun, was Gott von uns will?</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus2%2C19-20" target="_blank">Jakobus 2,19-20 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Am Tag des Gerichts werden viele zu mir sagen: ›Herr, Herr! In deinem Namen haben wir prophetische Weisungen verkündet, in deinem Namen haben wir böse Geister ausgetrieben und viele Wunder getan.‹ Und trotzdem werde ich das Urteil sprechen: ›Ich habe euch nie gekannt. Ihr habt versäumt, nach Gottes Willen zu leben; geht mir aus den Augen!‹</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us7%2C22-23" target="_blank">Matthäus 7,22-23 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Der Herr hat gesagt: »Dieses Volk da behauptet, mich zu ehren. Aber sie ehren mich nur mit Worten, mit dem Herzen sind sie weit weg von mir. Ihr ganzer Gottesdienst ist sinnlos, denn er besteht nur in der Befolgung von Vorschriften, die Menschen sich ausgedacht haben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jesaja29%2C13" target="_blank">Jesaja 29,13< (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn was der HERR sagt, das meint er auch so, und auf das, was er tut, kann man sich verlassen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm33%2C4" target="_blank">Psalm 33,4 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Achtet darauf, liebe Brüder und Schwestern, dass niemand von euch ein widerspenstiges, ungehorsames Herz hat und sich von dem lebendigen Gott abwendet. Ermahnt euch gegenseitig jeden Tag, solange jenes »Heute« gilt, damit niemand von euch dem Betrug der Sünde erliegt und sich dem Ruf dieser Stimme verschließt. Wir gehören erst wirklich zu Christus, wenn wir die Zuversicht, die uns am Anfang geschenkt wurde, bis zum Ende unerschütterlich festhalten!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Hebr%C3%A4er3%2C12-14" target="_blank">Hebräer 3,12-14 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Was ist nun also der Glaube? Er ist das Vertrauen darauf, dass das, was wir hoffen, sich erfüllen wird, und die Überzeugung, dass das, was man nicht sieht, existiert.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Hebr%C3%A4er11%2C1" target="_blank">Hebräer 11,1 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Auf diese Weise sollen wir alle im Glauben eins werden und den Sohn Gottes immer besser kennenlernen, sodass unser Glaube zur vollen Reife gelangt und wir ganz von Christus erfüllt sind.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser4%2C13" target="_blank">Epheser 4,13 (NLB)</a></div>
+					</div>
+					
+					
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Jesaja 55,8-11</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Matthäus 15,8</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Markus 7,6-8</a></div>
+					</div>
+					-->
+					<!-- Matth%C3%A4us21%2C21-22   "...Ihr könnt dann sogar zu diesem Berg sagen: ›Auf, stürze dich ins Meer!‹, und es wird geschehen...." -->
+					<!-- Judas22-24   "...Gott allein kann euch davor bewahren, vom rechten Weg abzuirren...." -->
+					<!-- Johannes 20,29  Da sagte Jesus zu ihm: »Du glaubst, weil du mich gesehen hast. Glücklich sind die, die mich nicht sehen und dennoch glauben.« -->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Ehrfurcht/Demut</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Erhebt euch nicht über andere, sondern seid immer freundlich. Habt Geduld und sucht in Liebe miteinander auszukommen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Epheser4%2C2" target="_blank">Epheser 4,2 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">In der Vollmacht, die mir Gott als Apostel gegeben hat, ermahne ich euch: Überschätzt euch nicht, sondern bleibt ehrlich und bescheiden im Urteil über euch selbst. Keiner von euch soll sich etwas anmaßen, was über die Kraft des Glaubens hinausgeht, die Gott ihm geschenkt hat.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer12%2C3" target="_blank">Römer 12,3 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Seid einmütig untereinander! Strebt nicht hoch hinaus und seid euch auch für geringe Aufgaben nicht zu schade[2]. Hütet euch davor, auf andere herabzusehen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer12%2C16" target="_blank">Römer 12,16 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Ordnet euch aus Achtung vor Christus bereitwillig einander unter.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Epheser5%2C21" target="_blank">Epheser 5,21 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Seid nachsichtig mit den Fehlern der anderen und vergebt denen, die euch gekränkt haben. Vergesst nicht, dass der Herr euch vergeben hat und dass ihr deshalb auch anderen vergeben müsst.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Kolosser3%2C13" target="_blank">Kolosser 3,13 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Deshalb urteilt niemals voreilig! Wenn Christus kommt, wird er alles ans Licht bringen, was jetzt noch verborgen ist, auch unsere geheimsten Wünsche und Gedanken. Dann wird Gott jeden so loben, wie er es verdient hat.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther4%2C5" target="_blank">1.Korinther 4,5 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Wenn sich einer also etwas auf sein Wissen einbildet, so weiß er gerade nicht, worauf es ankommt. Wer aber Gott liebt, dem wendet sich Gott in Liebe zu.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther8%2C2-3" target="_blank">1.Korinther 8,2-3 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Oder habt ihr etwa vergessen, dass euer Körper ein Tempel des Heiligen Geistes ist, der in euch wohnt und den euch Gott gegeben hat? Ihr gehört also nicht mehr euch selbst. Gott hat euch freigekauft, damit ihr ihm gehört; lebt deshalb so, dass ihr mit eurem Körper Gott Ehre bereitet.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther6%2C19-20" target="_blank">1.Korinther 6,19-20 (HFA)</a></div>
+					</div>
+				</div>
+			</div>
+			<!--
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Gottesdienst</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Jesaja 58,3-7</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Amos 5,21-24</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Hosea 6,6</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Micha 6,8</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Sacharja 7,9-10</a></div>
+					</div>
+				</div>
+			</div>
+			-->
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Regierung/Gehorsam</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Gehorche der Regierung, unter der du lebst, denn sie ist von Gott eingesetzt. Alle Regierungen haben ihre Vollmacht von Gott. Wer sich also den Gesetzen des Landes widersetzt, der verweigert Gott selbst den Gehorsam und wird bestraft werden.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/R%C3%B6mer13%2C1-2" target="_blank">Römer 13,1-2 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Darum müsst ihr euch der Staatsgewalt unterordnen, nicht nur aus Furcht vor dem Gericht Gottes, sondern auch, weil euer Gewissen euch dazu anhält.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/R%C3%B6mer13%2C5" target="_blank">Römer 13,5 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Gebt also jedem, was ihr ihm schuldig seid! Wem Steuern zustehen, dem zahlt Steuern, wem Zoll zusteht, dem zahlt Zoll. Wem Respekt zusteht, dem erweist Respekt, und wem Ehre zusteht, dem erweist Ehre.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/R%C3%B6mer13%2C7" target="_blank">Römer 13,7 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">(...) Der höchste Gott ist Herr über alle Königreiche der Welt, er vertraut die Herrschaft an, wem er will.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Daniel4%2C29" target="_blank">Daniel 4,29 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Er muss Menschen nicht erst lange verhören und sie zu sich laden vor Gericht – nein, ohne Verhandlung stürzt er die Mächtigen und setzt andere an ihrer Stelle ein.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hiob34%2C23-24" target="_blank">Hiob 34,23-24 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn Gott allein ist Richter: Den einen lässt er fallen, den anderen bringt er zu Ansehen und Macht.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm75%2C8" target="_blank">Psalm 75,8 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Er stürzt die Mächtigen und nimmt den obersten Richtern die Gewalt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja40%2C23" target="_blank">Jesaja 40,23 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Er stürzt Herrscher von ihrem Thron, Unterdrückte aber richtet er auf.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas1%2C52" target="_blank">Lukas 1,52 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Sofort befahl der Hohe Priester Hananias denen, die neben Paulus standen, ihn auf den Mund zu schlagen. Doch Paulus erwiderte: »Gott wird dich schlagen, du getünchte Wand! Was für ein Richter bist du denn, wenn du selbst das Gesetz brichst, indem du mich schlagen lässt?« Die, die neben Paulus standen, sagten zu ihm: »Ist das die Art, wie man mit einem Hohen Priester spricht?« »Es tut mir leid, Brüder. Ich wusste nicht, dass er der Hohe Priester ist«, entgegnete Paulus, »denn in der Schrift heißt es: ›Eine führende Persönlichkeit deines Volkes sollst du nicht beschimpfen.‹«</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Apostelgeschichte23%2C2-5" target="_blank">Apostelgeschichte 23,2-5 (NLB)</a> (siehe auch <a href="https://www.bibleserver.com/NLB/2.Mose22%2C27" target="_blank">2.Mose 22,27</a>)</div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Und wenn jemand dich zwingt, eine Meile mit ihm zu gehen, dann geh mit ihm zwei.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Matth%C3%A4us5%2C41-42" target="_blank">Matthäus 5,41-42 (GNB)</a></div>
+					</div>
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Taten</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">In Christus Jesus sind wir Gottes Meisterstück. Er hat uns geschaffen, dass wir tun, was wirklich gut ist, gute Werke, die er für uns vorbereitet hat, dass wir damit unser Leben gestalten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Epheser2%2C10" target="_blank">Epheser 2,10 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Strengt euch deshalb an, diese Zusagen Gottes in eurem Glauben zu leben. Dann zeigt sich euer Glaube durch ein vorbildliches Leben. Ein vorbildliches Leben aber führt zur tieferen Erkenntnis Gottes. Aus der Erkenntnis Gottes folgt Selbstbeherrschung. Aus der Selbstbeherrschung wächst Geduld und aus der Geduld ein Leben im Glauben zur Ehre Gottes. Aus der Ehrfurcht vor Gott entspringt die Liebe zu den Gläubigen, und aus dieser schließlich die Liebe zu allen Menschen. Je mehr ihr in dieser Hinsicht vorankommt, desto mehr werdet ihr mithilfe der Erkenntnis von Jesus Christus, unserem Herrn, ein sinnvolles, auf andere ausstrahlendes Leben führen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/2.Petrus1" target="_blank">2.Petrus 1,5-8 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Behandle andere so, wie du von ihnen behandelt werden möchtest.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Lukas6%2C31" target="_blank">Lukas 6:31 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Werdet barmherzig, so wie euer Vater barmherzig ist! Verurteilt nicht andere, dann wird Gott auch euch nicht verurteilen. Sitzt über niemand zu Gericht, dann wird Gott auch über euch nicht zu Gericht sitzen. Verzeiht, dann wird Gott euch verzeihen. Schenkt, dann wird Gott euch schenken; ja, er wird euch so überreich beschenken, dass ihr gar nicht alles fassen könnt. Darum gebraucht anderen gegenüber ein reichliches Maß; denn Gott wird bei euch dasselbe Maß verwenden.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas6%2C36-38" target="_blank">Lukas 6:36-38 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank">Jesaja 58:7</a></div> <!-- ist auch bei Gottesdienst -- >
+					</div>
+					-->
+					<!-- Prediger11%2C9   "Freu dich, junger Mensch! Sei glücklich, solange du noch jung bist! Tu, was dir Spaß macht, wozu deine Augen dich locken! Aber vergiss nicht, dass Gott für alles von dir Rechenschaft fordern wird." -->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Gebet</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Am nächsten Morgen stand Jesus vor Tagesanbruch auf und zog sich an eine einsam gelegene Stelle zurück, um dort allein zu beten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Markus1%2C35" target="_blank">Markus 1:35 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Jesus aber zog sich immer wieder in die Einsamkeit zurück, um zu beten.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas5%2C16" target="_blank">Lukas 5,16 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">In dieser Zeit verließ Jesus die Stadt und stieg auf einen Berg, um zu beten. Die ganze Nacht hindurch sprach er im Gebet mit Gott.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas6%2C12" target="_blank">Lukas 6,12 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
 			<!--
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
@@ -229,66 +473,22 @@
 </html>
 
 <!--
-Vertrauen
------------------
-
-Glaube/Vertrauen
-------------------------------
-Jakobus 2,19
-Matthäus 7,22
-Jesaja 29,13
-Matthäus 15,8
-Markus 7,6-8
-Psalm 33,4
-Hebräer 3,12-14
-Jesaje 55,8-11
-Hebräer 11,1
-Epheser 4,13
-
-Ehrfurcht/Demut
-----------------------------
-Epheser 4,2
-Römer 12,3
-Römer 12,16
-Epheser 5,21
-Kolosser 3,13
-1.Korinther 4,5
-1.Korinther 8,2-3
 
 
-Gottesdienst
----------------------
-Jesaja 58,3-7
-Amos 5,21-24
-Hosea 6,6
-Micha 6,8
-Sacharja 7,9-10
-
-Regierung
------------------
-Römer 13,1-7
-Daniel 4,29
-Hiob 34,23-24
-Psalm 75,8
-Jesaja 40,23
-Lukas 1,52
-Apostelgeschichte 23,2-5 (2.Mose 22,27)
-
-Taten:
------------------
-Epheser 2,10
-1.Korinther 12,18
 
 Gebet:
 -----------------
-Markus 1:35
+
 Lukas 3:21
-Lukas 5:16
-Lukas 6:12
 Lukas 9:18
 Lukas 9:28-29
 Lukas 22:32
 Lukas 22:40...
 Lukas 23:34
+Lukas 18,1-8
+
+
+Philipper3%2C20-21   "Denn unser Bürgerrecht ist in ⟨den⟩ Himmeln,..."
+
 
 -->
