neues Thema "Verantwortung" mit einer Bibelstelle

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -401,13 +401,21 @@
 						<div class="text">Werdet barmherzig, so wie euer Vater barmherzig ist! Verurteilt nicht andere, dann wird Gott auch euch nicht verurteilen. Sitzt über niemand zu Gericht, dann wird Gott auch über euch nicht zu Gericht sitzen. Verzeiht, dann wird Gott euch verzeihen. Schenkt, dann wird Gott euch schenken; ja, er wird euch so überreich beschenken, dass ihr gar nicht alles fassen könnt. Darum gebraucht anderen gegenüber ein reichliches Maß; denn Gott wird bei euch dasselbe Maß verwenden.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas6%2C36-38" target="_blank">Lukas 6:36-38 (GNB)</a></div>
 					</div>
-					<!--
 					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank">Jesaja 58:7</a></div> <!-- ist auch bei Gottesdienst -- >
+						<div class="text">Teilt euer Brot mit den Hungrigen, nehmt Obdachlose bei euch auf, und wenn ihr einem begegnet, der in Lumpen herumläuft, gebt ihm Kleider! Helft, wo ihr könnt, und verschließt eure Augen nicht vor den Nöten eurer Mitmenschen!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja58%2C7" target="_blank">Jesaja 58:7 (HFA)</a></div> <!-- ist auch bei Gottesdienst -->
 					</div>
-					-->
-					<!-- Prediger11%2C9   "Freu dich, junger Mensch! Sei glücklich, solange du noch jung bist! Tu, was dir Spaß macht, wozu deine Augen dich locken! Aber vergiss nicht, dass Gott für alles von dir Rechenschaft fordern wird." -->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Verantwortung</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Du junger Mensch, genieße deine Jugend und freu dich in der Blüte deines Lebens! Tu, was dein Herz dir sagt und was deinen Augen gefällt! Aber sei dir bewusst, dass Gott dich für alles zur Rechenschaft ziehen wird!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Prediger11%2C9" target="_blank">Prediger 9,11 (HFA)</a></div>
+					</div>
 				</div>
 			</div>
 			<div class="btnframe">
