Bibelstellen überarbeitet und ergänzt

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -153,21 +153,19 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser4%2C2" target="_blank">Kolosser 4,2 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Und der Friede, den Christus schenkt, soll euer ganzes Leben bestimmen. Gott hat euch dazu berufen, in Frieden miteinander zu leben; ihr gehört ja alle zu dem einen Leib von Christus. Dankt Gott dafür!</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C15" target="_blank">Kolosser 3,15 (HFA)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">All euer Tun – euer Reden wie euer Handeln – soll zeigen, dass Jesus euer Herr ist. Weil ihr mit ihm verbunden seid, könnt ihr Gott, dem Vater, für alles danken.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C17" target="_blank">Kolosser 3,17 (HFA)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">Macht euch keine Sorgen, sondern wendet euch in jeder Lage an Gott und bringt eure Bitten vor ihn. Tut es mit Dank für das, was er euch geschenkt hat.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Philipper4%2C6" target="_blank">Philipper 4,6 (GNB)</a></div>
-					</div>
-					<div class="moreinfo">
 						<div class="text">Da wir also ein Reich empfangen, das nicht zerstört werden kann, wollen wir dankbar sein und Gott Freude machen, indem wir ihn in Ehrfurcht vor seiner Heiligkeit anbeten!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Hebr%C3%A4er12%2C28" target="_blank">Hebräer 12,28 (NLB)</a></div>
 					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
 				</div>
 			</div>
 			<div class="btnframe">
@@ -199,11 +197,11 @@
 						<div class="text">Geht jetzt zu eurem Festmahl, esst und trinkt und gebt auch denen etwas ab, für die nichts vorbereitet ist! Heute ist ein Festtag für Jahwe. Seid nicht traurig, denn die Freude an Jahwe ist euer Schutz!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Nehemia8%2C10" target="_blank">Nehemia 8,10 (NeÜ)</a></div>
 					</div>
+					<!--
 					<div class="moreinfo">
 						<div class="text">Freut euch mit den Fröhlichen! Weint aber auch mit den Trauernden!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer12%2C15" target="_blank">Römer 12,15 (HFA)</a></div>
 					</div>
-					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
@@ -237,10 +235,6 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm33%2C4" target="_blank">Psalm 33,4 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Achtet darauf, liebe Brüder und Schwestern, dass niemand von euch ein widerspenstiges, ungehorsames Herz hat und sich von dem lebendigen Gott abwendet. Ermahnt euch gegenseitig jeden Tag, solange jenes »Heute« gilt, damit niemand von euch dem Betrug der Sünde erliegt und sich dem Ruf dieser Stimme verschließt. Wir gehören erst wirklich zu Christus, wenn wir die Zuversicht, die uns am Anfang geschenkt wurde, bis zum Ende unerschütterlich festhalten!</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Hebr%C3%A4er3%2C12-14" target="_blank">Hebräer 3,12-14 (GNB)</a></div>
-					</div>
-					<div class="moreinfo">
 						<div class="text">Was ist nun also der Glaube? Er ist das Vertrauen darauf, dass das, was wir hoffen, sich erfüllen wird, und die Überzeugung, dass das, was man nicht sieht, existiert.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Hebr%C3%A4er11%2C1" target="_blank">Hebräer 11,1 (NLB)</a></div>
 					</div>
@@ -259,6 +253,14 @@
 					<div class="moreinfo">
 						<div class="text">Gott allein kann euch davor bewahren, vom rechten Weg abzuirren. So könnt ihr von Schuld befreit und voller Freude vor ihn treten und ihn in seiner Herrlichkeit sehen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Judas24" target="_blank">Judas 24 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Macht euch keine Sorgen, sondern wendet euch in jeder Lage an Gott und bringt eure Bitten vor ihn. Tut es mit Dank für das, was er euch geschenkt hat.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Philipper4%2C6" target="_blank">Philipper 4,6 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Achtet darauf, liebe Brüder und Schwestern, dass niemand von euch ein widerspenstiges, ungehorsames Herz hat und sich von dem lebendigen Gott abwendet. Ermahnt euch gegenseitig jeden Tag, solange jenes »Heute« gilt, damit niemand von euch dem Betrug der Sünde erliegt und sich dem Ruf dieser Stimme verschließt. Wir gehören erst wirklich zu Christus, wenn wir die Zuversicht, die uns am Anfang geschenkt wurde, bis zum Ende unerschütterlich festhalten!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Hebr%C3%A4er3%2C12-14" target="_blank">Hebräer 3,12-14 (GNB)</a></div>
 					</div>
 				
 					<!--
@@ -302,6 +304,10 @@
 						<div class="text">Du glaubst, dass es nur einen einzigen Gott gibt? Schön und gut. Aber das glauben sogar die Dämonen – und zittern vor Angst. Wann endlich wirst du törichter Mensch einsehen, dass der Glaube nichts wert ist, wenn wir nicht auch tun, was Gott von uns will?</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus2%2C19-20" target="_blank">Jakobus 2,19-20 (HFA)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Helft euch gegenseitig bei euren Schwierigkeiten und Problemen, so erfüllt ihr das Gesetz, das wir von Christus haben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Galater6%2C2" target="_blank">Galater 6,2 (NLB)</a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
@@ -328,6 +334,10 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer12%2C3" target="_blank">Römer 12,3 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Wer sich jedoch einbildet, besser zu sein als die anderen, der betrügt sich selbst.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Galater6%2C2" target="_blank">Galater 6,2 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Seid einmütig untereinander! Strebt nicht hoch hinaus und seid euch auch für geringe Aufgaben nicht zu schade. Hütet euch davor, auf andere herabzusehen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/R%C3%B6mer12%2C16" target="_blank">Römer 12,16 (HFA)</a></div>
 					</div>
@@ -351,6 +361,16 @@
 						<div class="text">Oder habt ihr etwa vergessen, dass euer Körper ein Tempel des Heiligen Geistes ist, der in euch wohnt und den euch Gott gegeben hat? Ihr gehört also nicht mehr euch selbst. Gott hat euch freigekauft, damit ihr ihm gehört; lebt deshalb so, dass ihr mit eurem Körper Gott Ehre bereitet.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Korinther6%2C19-20" target="_blank">1.Korinther 6,19-20 (HFA)</a></div>
 					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
 				</div>
 			</div>
 			<div class="btnframe">
@@ -458,6 +478,10 @@
 						<div class="text">Du junger Mensch, genieße deine Jugend und freu dich in der Blüte deines Lebens! Tu, was dein Herz dir sagt und was deinen Augen gefällt! Aber sei dir bewusst, dass Gott dich für alles zur Rechenschaft ziehen wird!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Prediger11%2C9" target="_blank">Prediger 9,11 (HFA)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Darum soll jeder sein Leben genau prüfen. Dann wird er sich über seine guten Taten freuen können, aber keinen Grund zur Überheblichkeit haben. Denn jeder ist für sein eigenes Tun vor Gott verantwortlich. Das ist schon schwer genug!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Galater6%2C4-5" target="_blank">Galater 6,4-5 (HFA)</a></div>
+					</div>
 				</div>
 			</div>
 			<div class="btnframe">
@@ -494,10 +518,6 @@
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
 					</div>
-					<div class="moreinfo">
-						<div class="text"></div>
-						<div class="footer"><a href="" target="_blank"></a></div>
-					</div>
 					-->
 				</div>
 			</div>
@@ -506,6 +526,14 @@
 					<div class="label">Verhalten</div>
 				</div>
 				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Und der Friede, den Christus schenkt, soll euer ganzes Leben bestimmen. Gott hat euch dazu berufen, in Frieden miteinander zu leben; ihr gehört ja alle zu dem einen Leib von Christus. Dankt Gott dafür!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C15" target="_blank">Kolosser 3,15 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">All euer Tun – euer Reden wie euer Handeln – soll zeigen, dass Jesus euer Herr ist. Weil ihr mit ihm verbunden seid, könnt ihr Gott, dem Vater, für alles danken.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser3%2C17" target="_blank">Kolosser 3,17 (HFA)</a></div>
+					</div>
 					<div class="moreinfo">
 						<div class="text">Behandle andere so, wie du von ihnen behandelt werden möchtest.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Lukas6%2C31" target="_blank">Lukas 6:31 (NLB)</a></div>
